sdk/metask/agentcore.h

typedef struct metask_agentcore_skill_catalog metask_agentcore_skill_catalog;
typedef struct {
    const uint8_t *ptr;
    uint64_t len;
} metask_agentcore_bytes_view_v1;
/* New Skills use default_state_code. Each listed catalog Skill ID uses the
 * opposite state. The borrowed list must not contain duplicate or foreign
 * IDs and is copied before session_create/session_update_skills returns. */
typedef struct {
    uint32_t struct_size;
    uint32_t default_state_code;
    const metask_agentcore_bytes_view_v1 *exception_skill_ids;
    uint64_t exception_skill_id_count;
    uint64_t reserved[4];
} metask_agentcore_skill_selection_v1;
/* Canonical Tool(specifier) rules are borrowed for one call. AgentCore
 * validates, copies, and compiles the complete replacement atomically. */
typedef struct {
    uint32_t struct_size;
    uint32_t reserved0;
    const metask_agentcore_bytes_view_v1 *allow;
    uint64_t allow_count;
    const metask_agentcore_bytes_view_v1 *ask;
    uint64_t ask_count;
    const metask_agentcore_bytes_view_v1 *deny;
    uint64_t deny_count;
    uint64_t reserved[4];
} metask_agentcore_permission_rule_set_v1;
/* workspace_root is the execution base for relative paths used by the
 * supported built-in file tools and shell commands. It is not a filesystem
 * containment boundary: absolute paths remain valid unless the Host applies
 * a separate sandbox/policy. workspace_root must identify an existing
 * absolute path. workspace_home may be empty to use workspace_root; otherwise
 * it must be absolute. Provider credentials never
 * appear in event or diagnostic buffers. Prompts, model/tool/UI payloads may
 * contain sensitive data, so the Host owns logging and redaction. */
typedef struct {
    uint32_t struct_size;
    uint32_t provider_kind_code;
    uint32_t permission_mode_code;
    uint32_t shell_policy_code;
    /* These strings and allowed tool names share
     * METASK_AGENTCORE_MAX_SESSION_METADATA_BYTES_V1; each is at most
     * METASK_AGENTCORE_MAX_METADATA_STRING_BYTES_V1. */
    metask_agentcore_bytes_view_v1 api_key;
    /* This is the fixed provider model for the Session and all AgentCore Skill
     * fork children. A Skill model other than empty/"inherit" is unavailable
     * and cannot override this binding. */
    metask_agentcore_bytes_view_v1 model;
    metask_agentcore_bytes_view_v1 base_url;
    metask_agentcore_bytes_view_v1 workspace_root;
    metask_agentcore_bytes_view_v1 workspace_home;
    const metask_agentcore_bytes_view_v1 *allowed_tools;
    uint64_t allowed_tool_count;
    /* skill_catalog and skill_selection must both be NULL or both non-NULL.
     * A catalog must belong to this Runtime and canonical Workspace binding.
     * The selection is validated against that exact catalog. */
    metask_agentcore_skill_catalog *skill_catalog;
    const metask_agentcore_skill_selection_v1 *skill_selection;
    /* NULL means no imported rules. A non-NULL empty set has the same effective
     * meaning and is useful for sharing construction code with updates. */
    const metask_agentcore_permission_rule_set_v1 *permission_rules;
    uint64_t reserved[4];
} metask_agentcore_session_config_v1;
typedef struct {
    uint32_t struct_size;
    uint32_t kind_code;
    metask_agentcore_bytes_view_v1 text;
    metask_agentcore_bytes_view_v1 skill_id;
    metask_agentcore_bytes_view_v1 catalog_revision;
    metask_agentcore_bytes_view_v1 arguments_json;
    uint64_t reserved[4];
} metask_agentcore_run_input_v1;
typedef struct {
    uint32_t struct_size;
    /* 1..METASK_AGENTCORE_MAX_TURNS_V1 */
    uint32_t max_turns;
    uint64_t reserved[4];
} metask_agentcore_run_options_v1;
typedef struct {
    uint32_t struct_size;
    uint32_t stop_reason_code;
    uint32_t turns;
    uint32_t tool_calls;
    uint64_t reserved[4];
} metask_agentcore_run_result_v1;
/* metask_agentcore_run_result_v1 fields are defined only when session_run_input returns
 * METASK_AGENTCORE_STATUS_OK. stop_reason_code is then one of METASK_AGENTCORE_STOP_END_TURN through
 * METASK_AGENTCORE_STOP_TOOL_LOOP. */

typedef struct {
    uint32_t struct_size;
    uint32_t outcome_code;
    uint64_t before_context_tokens;
    uint64_t after_context_tokens;
    uint64_t input_tokens;
    uint64_t output_tokens;
    uint64_t cache_read_input_tokens;
    uint64_t cache_creation_input_tokens;
    uint64_t reserved[4];
} metask_agentcore_compact_result_v1;