sdk/rust/src/raw.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_session_config_v1"]
        [::std::mem::size_of::<metask_agentcore_session_config_v1>() - 168usize];
    ["Alignment of metask_agentcore_session_config_v1"]
        [::std::mem::align_of::<metask_agentcore_session_config_v1>() - 8usize];
    ["Offset of field: metask_agentcore_session_config_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_session_config_v1::provider_kind_code"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, provider_kind_code) - 4usize];
    ["Offset of field: metask_agentcore_session_config_v1::permission_mode_code"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, permission_mode_code) - 8usize];
    ["Offset of field: metask_agentcore_session_config_v1::shell_policy_code"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, shell_policy_code) - 12usize];
    ["Offset of field: metask_agentcore_session_config_v1::api_key"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, api_key) - 16usize];
    ["Offset of field: metask_agentcore_session_config_v1::model"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, model) - 32usize];
    ["Offset of field: metask_agentcore_session_config_v1::base_url"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, base_url) - 48usize];
    ["Offset of field: metask_agentcore_session_config_v1::workspace_root"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, workspace_root) - 64usize];
    ["Offset of field: metask_agentcore_session_config_v1::workspace_home"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, workspace_home) - 80usize];
    ["Offset of field: metask_agentcore_session_config_v1::allowed_tools"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, allowed_tools) - 96usize];
    ["Offset of field: metask_agentcore_session_config_v1::allowed_tool_count"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, allowed_tool_count) - 104usize];
    ["Offset of field: metask_agentcore_session_config_v1::skill_catalog"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, skill_catalog) - 112usize];
    ["Offset of field: metask_agentcore_session_config_v1::skill_selection"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, skill_selection) - 120usize];
    ["Offset of field: metask_agentcore_session_config_v1::permission_rules"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, permission_rules) - 128usize];
    ["Offset of field: metask_agentcore_session_config_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_session_config_v1, reserved) - 136usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_run_input_v1 {
    pub struct_size: u32,
    pub kind_code: u32,
    pub text: metask_agentcore_bytes_view_v1,
    pub skill_id: metask_agentcore_bytes_view_v1,
    pub catalog_revision: metask_agentcore_bytes_view_v1,
    pub arguments_json: metask_agentcore_bytes_view_v1,
    pub reserved: [u64; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_run_input_v1"]
        [::std::mem::size_of::<metask_agentcore_run_input_v1>() - 104usize];
    ["Alignment of metask_agentcore_run_input_v1"]
        [::std::mem::align_of::<metask_agentcore_run_input_v1>() - 8usize];
    ["Offset of field: metask_agentcore_run_input_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_run_input_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_run_input_v1::kind_code"]
        [::std::mem::offset_of!(metask_agentcore_run_input_v1, kind_code) - 4usize];
    ["Offset of field: metask_agentcore_run_input_v1::text"]
        [::std::mem::offset_of!(metask_agentcore_run_input_v1, text) - 8usize];
    ["Offset of field: metask_agentcore_run_input_v1::skill_id"]
        [::std::mem::offset_of!(metask_agentcore_run_input_v1, skill_id) - 24usize];
    ["Offset of field: metask_agentcore_run_input_v1::catalog_revision"]
        [::std::mem::offset_of!(metask_agentcore_run_input_v1, catalog_revision) - 40usize];
    ["Offset of field: metask_agentcore_run_input_v1::arguments_json"]
        [::std::mem::offset_of!(metask_agentcore_run_input_v1, arguments_json) - 56usize];
    ["Offset of field: metask_agentcore_run_input_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_run_input_v1, reserved) - 72usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_run_options_v1 {
    pub struct_size: u32,
    pub max_turns: u32,
    pub reserved: [u64; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_run_options_v1"]
        [::std::mem::size_of::<metask_agentcore_run_options_v1>() - 40usize];
    ["Alignment of metask_agentcore_run_options_v1"]
        [::std::mem::align_of::<metask_agentcore_run_options_v1>() - 8usize];
    ["Offset of field: metask_agentcore_run_options_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_run_options_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_run_options_v1::max_turns"]
        [::std::mem::offset_of!(metask_agentcore_run_options_v1, max_turns) - 4usize];
    ["Offset of field: metask_agentcore_run_options_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_run_options_v1, reserved) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_run_result_v1 {
    pub struct_size: u32,
    pub stop_reason_code: u32,
    pub turns: u32,
    pub tool_calls: u32,
    pub reserved: [u64; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_run_result_v1"]
        [::std::mem::size_of::<metask_agentcore_run_result_v1>() - 48usize];
    ["Alignment of metask_agentcore_run_result_v1"]
        [::std::mem::align_of::<metask_agentcore_run_result_v1>() - 8usize];
    ["Offset of field: metask_agentcore_run_result_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_run_result_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_run_result_v1::stop_reason_code"]
        [::std::mem::offset_of!(metask_agentcore_run_result_v1, stop_reason_code) - 4usize];
    ["Offset of field: metask_agentcore_run_result_v1::turns"]
        [::std::mem::offset_of!(metask_agentcore_run_result_v1, turns) - 8usize];
    ["Offset of field: metask_agentcore_run_result_v1::tool_calls"]
        [::std::mem::offset_of!(metask_agentcore_run_result_v1, tool_calls) - 12usize];
    ["Offset of field: metask_agentcore_run_result_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_run_result_v1, reserved) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_compact_result_v1 {
    pub struct_size: u32,
    pub outcome_code: u32,
    pub before_context_tokens: u64,
    pub after_context_tokens: u64,
    pub input_tokens: u64,
    pub output_tokens: u64,
    pub cache_read_input_tokens: u64,
    pub cache_creation_input_tokens: u64,
    pub reserved: [u64; 4usize],
}
